--- a/example_config.json
+++ b/example_config.json
@@ -1,20 +1,21 @@
 {
 
-	"download_path": "/home/liam/Downloads", 
-
-	"host_path" : "/home/liam", 
+	"download_path": "/home/liam/Downloads",
 
 	"extensions": {
 
-	"Pictures" : [".jpeg", ".jpg", ".gif", ".png"],
-        
-	"Archive" : [".tar", ".bz2", ".gz", ".zip"],
- 
-        "Documents" : [ ".txt", ".odt", ".pdf"],
-        
-	"WebDocuments" : [".xml", ".html"],
 
-        "Applications": ["", ".exe"]
+    "/home/liam/Music" : [".wav", ".mp3"],
+
+	"/home/liam/Pictures" : [".jpeg", ".jpg", ".gif", ".png"],
+        
+	"/home/liam/Archive" : [".tar", ".bz2", ".gz", ".zip", ".tar.xz"],
+ 
+    "/home/liam/Documents" : [ ".txt", ".odt", ".pdf", ".cir"],
+        
+	"/home/liam/WebDocuments" : [".xml", ".html"],
+
+    "/home/liam/Applications": [".exe"]
  	}
 
 }
